# agent_productivity-

./: .gitignore  README.md
backend/: .gitignore  main.py  pyproject.toml  test.py
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/app/components/: Card.tsx  Input.tsx  Spinner.tsx
